# CV_Project

./: .gitignore  CMakeLists.txt  README  README.txt  bow.cpp  bow_auto.cpp  bow_prep.cpp  build_vocabulary.cpp  build_vocabulary.h  file_writer.cpp  files_manager.cpp  final_segmentation.cpp  find_histogram.cpp  find_histogram.h  identification.cpp  img_seg.cpp  main.cpp  main_header.h  meanshift.cpp  meanshift.h  metrics.cpp  predict_categories.cpp  predict_categories.h  results.cpp  segment_plates.cpp  segment_plates.h  sift_matching.cpp  sift_matching.h
BoW/: bow.cpp
FoodResults/: food_leftover_results.txt  food_localization_results.txt  food_segmentation_results.txt
FoodResults/tray1/bounding_boxes/: food_image_result_box.txt  leftover1_result_box.txt  leftover2_result_box.txt  leftover3_result_box.txt
FoodResults/tray2/bounding_boxes/: food_image_result_box.txt  leftover1_result_box.txt  leftover2_result_box.txt  leftover3_result_box.txt
FoodResults/tray3/bounding_boxes/: food_image_result_box.txt  leftover1_result_box.txt  leftover2_result_box.txt  leftover3_result_box.txt
FoodResults/tray4/bounding_boxes/: food_image_result_box.txt  leftover1_result_box.txt  leftover2_result_box.txt  leftover3_result_box.txt
FoodResults/tray5/bounding_boxes/: food_image_result_box.txt  leftover1_result_box.txt  leftover2_result_box.txt  leftover3_result_box.txt
FoodResults/tray6/bounding_boxes/: food_image_result_box.txt  leftover1_result_box.txt  leftover2_result_box.txt  leftover3_result_box.txt
FoodResults/tray7/bounding_boxes/: food_image_result_box.txt  leftover1_result_box.txt  leftover2_result_box.txt
FoodResults/tray8/bounding_boxes/: food_image_result_box.txt  leftover1_result_box.txt  leftover2_result_box.txt
Food_leftover_dataset/tray2/bounding_boxes/: food_image_bounding_box_test.txt
archive/: bow.cpp  bow_prep.cpp  img_seg.cpp  meanshift.cpp  past_ideas.cpp  predict_categories.cpp  sift_matching.cpp
arquive/: predict_categories.cpp  sift_matching.cpp
kmeans/: kmeans_10_11_.yml  kmeans_19_5_.yml
